--- a/index.html
+++ b/index.html
@@ -22,32 +22,45 @@
         </h2>
         <form action="" class="movie-form">
           <div class="form-inputs">
-          <label for="title-input" class="visually-hidden">Title</label>
-          <input type="text" id="title-input" class="" placeholder="Title" />
-          <label for="rate-input" class="visually-hidden">Rating</label>
-          <input
-            type="number"
-            id="rate-input"
-            class=""
-            placeholder="Rating"
-            min="0"
-            max="10"
-          />
-          <label for="year-input" class="visually-hidden">Year</label>
-          <input
-            type="number"
-            id="year-input"
-            class=""
-            placeholder="Year"
-            min="1900"
-            max="2050"
-          /></div>
-          <button type="submit" id="btn-movie-form" class="btn-movie-form">Submit</button>
+            <label for="title-input" class="visually-hidden">Title</label>
+            <input type="text" id="title-input" class="" placeholder="Title" />
+            <label for="rate-input" class="visually-hidden">Rating</label>
+            <input
+              type="number"
+              id="rate-input"
+              class=""
+              placeholder="Rating"
+              min="0"
+              max="10"
+            />
+            <label for="year-input" class="visually-hidden">Year</label>
+            <input
+              type="number"
+              id="year-input"
+              class=""
+              placeholder="Year"
+              min="1900"
+              max="2050"
+            />
+          </div>
+          <button type="submit" id="btn-movie-form" class="btn-movie-form">
+            Submit
+          </button>
         </form>
       </section>
     </header>
 
     <main></main>
-    <footer></footer>
+    <footer>
+      <p>
+        Designed by Mohammed Sobhi -
+        <a href="https://github.com/mohammedsobhi" target="_blank">github</a>
+      </p>
+
+      <p>
+        Developed by Mohammed Ramadan -
+        <a href="https://github.com/imohammedramadan" target="_blank">github</a>
+      </p>
+    </footer>
   </body>
 </html>
