added movie cards grid fixed main height

--- a/index.html
+++ b/index.html
@@ -16,10 +16,12 @@
   <body>
     <header>
       <h1>My Movie list</h1>
+
       <section aria-labelledby="movie-form-heading" class="movie-form-section">
         <h2 id="movie-form-heading" class="movie-form-heading visually-hidden">
           Movie submission form
         </h2>
+
         <form action="" class="movie-form">
           <div class="form-inputs">
             <label for="title-input" class="visually-hidden">Title</label>
@@ -43,14 +45,467 @@
               max="2050"
             />
           </div>
-          <button type="submit" id="btn-movie-form" class="btn-movie-form">
+
+          <button type="submit" id="btn-movie-form" class="btn btn-movie-form">
             Submit
           </button>
         </form>
       </section>
     </header>
 
-    <main></main>
+    <main>
+      <div class="movie-cards-grid">
+        <div class="movie-card">
+          <div class="card-img">
+            <img src="/images/tenet-poster.jpg" alt="tenet-poster" />
+          </div>
+          <div class="card-info">
+            <h4 class="card-title">Tenet</h4>
+            <div id="card-year-rate" class="card-year-rate">
+              <p id="card-year" class="card-year">2020</p>
+              <p id="card-rate" class="card-rate">9</p>
+              <img
+                class="card-rate-star"
+                src="/assets/star.svg"
+                alt="rate-star"
+              />
+            </div>
+
+            <div class="card-review-container">
+              <h5 id="card-review-heading" class="card-review-heading">
+                Review:
+              </h5>
+              <p id="card-review" class="card-review">
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                Quisquam, praesentium deleniti. Necessitatibus in quibusdam
+                autem illum sunt eveniet dolorum aliquid deserunt omnis, fugiat
+                esse, quod doloribus quaerat amet doloremque voluptas.
+              </p>
+            </div>
+            <button id="btn-card-review" class="btn btn-card-review">
+              view full review
+            </button>
+          </div>
+        </div>
+        <div class="movie-card">
+          <div class="card-img">
+            <img src="/images/tenet-poster.jpg" alt="tenet-poster" />
+          </div>
+          <div class="card-info">
+            <h4 class="card-title">Tenet</h4>
+            <div id="card-year-rate" class="card-year-rate">
+              <p id="card-year" class="card-year">2020</p>
+              <p id="card-rate" class="card-rate">9</p>
+              <img
+                class="card-rate-star"
+                src="/assets/star.svg"
+                alt="rate-star"
+              />
+            </div>
+
+            <div class="card-review-container">
+              <h5 id="card-review-heading" class="card-review-heading">
+                Review:
+              </h5>
+              <p id="card-review" class="card-review">
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                Quisquam, praesentium deleniti. Necessitatibus in quibusdam
+                autem illum sunt eveniet dolorum aliquid deserunt omnis, fugiat
+                esse, quod doloribus quaerat amet doloremque voluptas.
+              </p>
+            </div>
+            <button id="btn-card-review" class="btn btn-card-review">
+              view full review
+            </button>
+          </div>
+        </div>
+        <div class="movie-card">
+          <div class="card-img">
+            <img src="/images/tenet-poster.jpg" alt="tenet-poster" />
+          </div>
+          <div class="card-info">
+            <h4 class="card-title">Tenet</h4>
+            <div id="card-year-rate" class="card-year-rate">
+              <p id="card-year" class="card-year">2020</p>
+              <p id="card-rate" class="card-rate">9</p>
+              <img
+                class="card-rate-star"
+                src="/assets/star.svg"
+                alt="rate-star"
+              />
+            </div>
+
+            <div class="card-review-container">
+              <h5 id="card-review-heading" class="card-review-heading">
+                Review:
+              </h5>
+              <p id="card-review" class="card-review">
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                Quisquam, praesentium deleniti. Necessitatibus in quibusdam
+                autem illum sunt eveniet dolorum aliquid deserunt omnis, fugiat
+                esse, quod doloribus quaerat amet doloremque voluptas.
+              </p>
+            </div>
+            <button id="btn-card-review" class="btn btn-card-review">
+              view full review
+            </button>
+          </div>
+        </div>
+        <div class="movie-card">
+          <div class="card-img">
+            <img src="/images/tenet-poster.jpg" alt="tenet-poster" />
+          </div>
+          <div class="card-info">
+            <h4 class="card-title">Tenet</h4>
+            <div id="card-year-rate" class="card-year-rate">
+              <p id="card-year" class="card-year">2020</p>
+              <p id="card-rate" class="card-rate">9</p>
+              <img
+                class="card-rate-star"
+                src="/assets/star.svg"
+                alt="rate-star"
+              />
+            </div>
+
+            <div class="card-review-container">
+              <h5 id="card-review-heading" class="card-review-heading">
+                Review:
+              </h5>
+              <p id="card-review" class="card-review">
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                Quisquam, praesentium deleniti. Necessitatibus in quibusdam
+                autem illum sunt eveniet dolorum aliquid deserunt omnis, fugiat
+                esse, quod doloribus quaerat amet doloremque voluptas.
+              </p>
+            </div>
+            <button id="btn-card-review" class="btn btn-card-review">
+              view full review
+            </button>
+          </div>
+        </div>
+        <div class="movie-card">
+          <div class="card-img">
+            <img src="/images/tenet-poster.jpg" alt="tenet-poster" />
+          </div>
+          <div class="card-info">
+            <h4 class="card-title">Tenet</h4>
+            <div id="card-year-rate" class="card-year-rate">
+              <p id="card-year" class="card-year">2020</p>
+              <p id="card-rate" class="card-rate">9</p>
+              <img
+                class="card-rate-star"
+                src="/assets/star.svg"
+                alt="rate-star"
+              />
+            </div>
+
+            <div class="card-review-container">
+              <h5 id="card-review-heading" class="card-review-heading">
+                Review:
+              </h5>
+              <p id="card-review" class="card-review">
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                Quisquam, praesentium deleniti. Necessitatibus in quibusdam
+                autem illum sunt eveniet dolorum aliquid deserunt omnis, fugiat
+                esse, quod doloribus quaerat amet doloremque voluptas.
+              </p>
+            </div>
+            <button id="btn-card-review" class="btn btn-card-review">
+              view full review
+            </button>
+          </div>
+        </div>
+        <div class="movie-card">
+          <div class="card-img">
+            <img src="/images/tenet-poster.jpg" alt="tenet-poster" />
+          </div>
+          <div class="card-info">
+            <h4 class="card-title">Tenet</h4>
+            <div id="card-year-rate" class="card-year-rate">
+              <p id="card-year" class="card-year">2020</p>
+              <p id="card-rate" class="card-rate">9</p>
+              <img
+                class="card-rate-star"
+                src="/assets/star.svg"
+                alt="rate-star"
+              />
+            </div>
+
+            <div class="card-review-container">
+              <h5 id="card-review-heading" class="card-review-heading">
+                Review:
+              </h5>
+              <p id="card-review" class="card-review">
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                Quisquam, praesentium deleniti. Necessitatibus in quibusdam
+                autem illum sunt eveniet dolorum aliquid deserunt omnis, fugiat
+                esse, quod doloribus quaerat amet doloremque voluptas.
+              </p>
+            </div>
+            <button id="btn-card-review" class="btn btn-card-review">
+              view full review
+            </button>
+          </div>
+        </div>
+        <div class="movie-card">
+          <div class="card-img">
+            <img src="/images/tenet-poster.jpg" alt="tenet-poster" />
+          </div>
+          <div class="card-info">
+            <h4 class="card-title">Tenet</h4>
+            <div id="card-year-rate" class="card-year-rate">
+              <p id="card-year" class="card-year">2020</p>
+              <p id="card-rate" class="card-rate">9</p>
+              <img
+                class="card-rate-star"
+                src="/assets/star.svg"
+                alt="rate-star"
+              />
+            </div>
+
+            <div class="card-review-container">
+              <h5 id="card-review-heading" class="card-review-heading">
+                Review:
+              </h5>
+              <p id="card-review" class="card-review">
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                Quisquam, praesentium deleniti. Necessitatibus in quibusdam
+                autem illum sunt eveniet dolorum aliquid deserunt omnis, fugiat
+                esse, quod doloribus quaerat amet doloremque voluptas.
+              </p>
+            </div>
+            <button id="btn-card-review" class="btn btn-card-review">
+              view full review
+            </button>
+          </div>
+        </div>
+        <div class="movie-card">
+          <div class="card-img">
+            <img src="/images/tenet-poster.jpg" alt="tenet-poster" />
+          </div>
+          <div class="card-info">
+            <h4 class="card-title">Tenet</h4>
+            <div id="card-year-rate" class="card-year-rate">
+              <p id="card-year" class="card-year">2020</p>
+              <p id="card-rate" class="card-rate">9</p>
+              <img
+                class="card-rate-star"
+                src="/assets/star.svg"
+                alt="rate-star"
+              />
+            </div>
+
+            <div class="card-review-container">
+              <h5 id="card-review-heading" class="card-review-heading">
+                Review:
+              </h5>
+              <p id="card-review" class="card-review">
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                Quisquam, praesentium deleniti. Necessitatibus in quibusdam
+                autem illum sunt eveniet dolorum aliquid deserunt omnis, fugiat
+                esse, quod doloribus quaerat amet doloremque voluptas.
+              </p>
+            </div>
+            <button id="btn-card-review" class="btn btn-card-review">
+              view full review
+            </button>
+          </div>
+        </div>
+        <div class="movie-card">
+          <div class="card-img">
+            <img src="/images/tenet-poster.jpg" alt="tenet-poster" />
+          </div>
+          <div class="card-info">
+            <h4 class="card-title">Tenet</h4>
+            <div id="card-year-rate" class="card-year-rate">
+              <p id="card-year" class="card-year">2020</p>
+              <p id="card-rate" class="card-rate">9</p>
+              <img
+                class="card-rate-star"
+                src="/assets/star.svg"
+                alt="rate-star"
+              />
+            </div>
+
+            <div class="card-review-container">
+              <h5 id="card-review-heading" class="card-review-heading">
+                Review:
+              </h5>
+              <p id="card-review" class="card-review">
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                Quisquam, praesentium deleniti. Necessitatibus in quibusdam
+                autem illum sunt eveniet dolorum aliquid deserunt omnis, fugiat
+                esse, quod doloribus quaerat amet doloremque voluptas.
+              </p>
+            </div>
+            <button id="btn-card-review" class="btn btn-card-review">
+              view full review
+            </button>
+          </div>
+        </div>
+        <div class="movie-card">
+          <div class="card-img">
+            <img src="/images/tenet-poster.jpg" alt="tenet-poster" />
+          </div>
+          <div class="card-info">
+            <h4 class="card-title">Tenet</h4>
+            <div id="card-year-rate" class="card-year-rate">
+              <p id="card-year" class="card-year">2020</p>
+              <p id="card-rate" class="card-rate">9</p>
+              <img
+                class="card-rate-star"
+                src="/assets/star.svg"
+                alt="rate-star"
+              />
+            </div>
+
+            <div class="card-review-container">
+              <h5 id="card-review-heading" class="card-review-heading">
+                Review:
+              </h5>
+              <p id="card-review" class="card-review">
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                Quisquam, praesentium deleniti. Necessitatibus in quibusdam
+                autem illum sunt eveniet dolorum aliquid deserunt omnis, fugiat
+                esse, quod doloribus quaerat amet doloremque voluptas.
+              </p>
+            </div>
+            <button id="btn-card-review" class="btn btn-card-review">
+              view full review
+            </button>
+          </div>
+        </div>
+        <div class="movie-card">
+          <div class="card-img">
+            <img src="/images/tenet-poster.jpg" alt="tenet-poster" />
+          </div>
+          <div class="card-info">
+            <h4 class="card-title">Tenet</h4>
+            <div id="card-year-rate" class="card-year-rate">
+              <p id="card-year" class="card-year">2020</p>
+              <p id="card-rate" class="card-rate">9</p>
+              <img
+                class="card-rate-star"
+                src="/assets/star.svg"
+                alt="rate-star"
+              />
+            </div>
+
+            <div class="card-review-container">
+              <h5 id="card-review-heading" class="card-review-heading">
+                Review:
+              </h5>
+              <p id="card-review" class="card-review">
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                Quisquam, praesentium deleniti. Necessitatibus in quibusdam
+                autem illum sunt eveniet dolorum aliquid deserunt omnis, fugiat
+                esse, quod doloribus quaerat amet doloremque voluptas.
+              </p>
+            </div>
+            <button id="btn-card-review" class="btn btn-card-review">
+              view full review
+            </button>
+          </div>
+        </div>
+        <div class="movie-card">
+          <div class="card-img">
+            <img src="/images/tenet-poster.jpg" alt="tenet-poster" />
+          </div>
+          <div class="card-info">
+            <h4 class="card-title">Tenet</h4>
+            <div id="card-year-rate" class="card-year-rate">
+              <p id="card-year" class="card-year">2020</p>
+              <p id="card-rate" class="card-rate">9</p>
+              <img
+                class="card-rate-star"
+                src="/assets/star.svg"
+                alt="rate-star"
+              />
+            </div>
+
+            <div class="card-review-container">
+              <h5 id="card-review-heading" class="card-review-heading">
+                Review:
+              </h5>
+              <p id="card-review" class="card-review">
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                Quisquam, praesentium deleniti. Necessitatibus in quibusdam
+                autem illum sunt eveniet dolorum aliquid deserunt omnis, fugiat
+                esse, quod doloribus quaerat amet doloremque voluptas.
+              </p>
+            </div>
+            <button id="btn-card-review" class="btn btn-card-review">
+              view full review
+            </button>
+          </div>
+        </div>
+        <div class="movie-card">
+          <div class="card-img">
+            <img src="/images/tenet-poster.jpg" alt="tenet-poster" />
+          </div>
+          <div class="card-info">
+            <h4 class="card-title">Tenet</h4>
+            <div id="card-year-rate" class="card-year-rate">
+              <p id="card-year" class="card-year">2020</p>
+              <p id="card-rate" class="card-rate">9</p>
+              <img
+                class="card-rate-star"
+                src="/assets/star.svg"
+                alt="rate-star"
+              />
+            </div>
+
+            <div class="card-review-container">
+              <h5 id="card-review-heading" class="card-review-heading">
+                Review:
+              </h5>
+              <p id="card-review" class="card-review">
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                Quisquam, praesentium deleniti. Necessitatibus in quibusdam
+                autem illum sunt eveniet dolorum aliquid deserunt omnis, fugiat
+                esse, quod doloribus quaerat amet doloremque voluptas.
+              </p>
+            </div>
+            <button id="btn-card-review" class="btn btn-card-review">
+              view full review
+            </button>
+          </div>
+        </div>
+        <div class="movie-card">
+          <div class="card-img">
+            <img src="/images/tenet-poster.jpg" alt="tenet-poster" />
+          </div>
+          <div class="card-info">
+            <h4 class="card-title">Tenet</h4>
+            <div id="card-year-rate" class="card-year-rate">
+              <p id="card-year" class="card-year">2020</p>
+              <p id="card-rate" class="card-rate">9</p>
+              <img
+                class="card-rate-star"
+                src="/assets/star.svg"
+                alt="rate-star"
+              />
+            </div>
+
+            <div class="card-review-container">
+              <h5 id="card-review-heading" class="card-review-heading">
+                Review:
+              </h5>
+              <p id="card-review" class="card-review">
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                Quisquam, praesentium deleniti. Necessitatibus in quibusdam
+                autem illum sunt eveniet dolorum aliquid deserunt omnis, fugiat
+                esse, quod doloribus quaerat amet doloremque voluptas.
+              </p>
+            </div>
+            <button id="btn-card-review" class="btn btn-card-review">
+              view full review
+            </button>
+          </div>
+        </div>
+      </div>
+    </main>
+
     <footer>
       <p>
         Designed by Mohammed Sobhi -
