fixed grid wrap and enhancements

--- a/index.html
+++ b/index.html
@@ -53,11 +53,11 @@
       </section>
     </header>
 
-    <main>
-      <div class="movie-cards-grid">
-        <div class="movie-card">
+  <main>
+      <ul class="movie-cards-grid">
+        <li class="movie-card">
           <div class="card-img">
-            <img src="/images/tenet-poster.jpg" alt="tenet-poster" />
+            <img src="/assets/images/tenet-poster.jpg" alt="tenet-poster" width="100px" height="150px" />
           </div>
           <div class="card-info">
             <h4 class="card-title">Tenet</h4>
@@ -86,10 +86,10 @@
               view full review
             </button>
           </div>
-        </div>
-        <div class="movie-card">
+        </li>
+        <li class="movie-card">
           <div class="card-img">
-            <img src="/images/tenet-poster.jpg" alt="tenet-poster" />
+            <img src="/assets/images/tenet-poster.jpg" alt="tenet-poster" width="100px" height="150px"/>
           </div>
           <div class="card-info">
             <h4 class="card-title">Tenet</h4>
@@ -118,10 +118,10 @@
               view full review
             </button>
           </div>
-        </div>
-        <div class="movie-card">
+        </li>
+        <li class="movie-card">
           <div class="card-img">
-            <img src="/images/tenet-poster.jpg" alt="tenet-poster" />
+            <img src="/assets/images/tenet-poster.jpg" alt="tenet-poster" width="100px" height="150px" />
           </div>
           <div class="card-info">
             <h4 class="card-title">Tenet</h4>
@@ -150,10 +150,10 @@
               view full review
             </button>
           </div>
-        </div>
-        <div class="movie-card">
+        </li>
+        <li class="movie-card">
           <div class="card-img">
-            <img src="/images/tenet-poster.jpg" alt="tenet-poster" />
+            <img src="/assets/images/tenet-poster.jpg" alt="tenet-poster" width="100px" height="150px" />
           </div>
           <div class="card-info">
             <h4 class="card-title">Tenet</h4>
@@ -182,10 +182,10 @@
               view full review
             </button>
           </div>
-        </div>
-        <div class="movie-card">
+        </li>
+        <li class="movie-card">
           <div class="card-img">
-            <img src="/images/tenet-poster.jpg" alt="tenet-poster" />
+            <img src="/assets/images/tenet-poster.jpg" alt="tenet-poster" width="100px" height="150px" />
           </div>
           <div class="card-info">
             <h4 class="card-title">Tenet</h4>
@@ -214,10 +214,10 @@
               view full review
             </button>
           </div>
-        </div>
-        <div class="movie-card">
+        </li>
+        <li class="movie-card">
           <div class="card-img">
-            <img src="/images/tenet-poster.jpg" alt="tenet-poster" />
+            <img src="/assets/images/tenet-poster.jpg" alt="tenet-poster" width="100px" height="150px" />
           </div>
           <div class="card-info">
             <h4 class="card-title">Tenet</h4>
@@ -246,10 +246,10 @@
               view full review
             </button>
           </div>
-        </div>
-        <div class="movie-card">
+        </li>
+        <li class="movie-card">
           <div class="card-img">
-            <img src="/images/tenet-poster.jpg" alt="tenet-poster" />
+            <img src="/assets/images/tenet-poster.jpg" alt="tenet-poster" width="100px" height="150px" />
           </div>
           <div class="card-info">
             <h4 class="card-title">Tenet</h4>
@@ -278,10 +278,10 @@
               view full review
             </button>
           </div>
-        </div>
-        <div class="movie-card">
+        </li>
+        <li class="movie-card">
           <div class="card-img">
-            <img src="/images/tenet-poster.jpg" alt="tenet-poster" />
+            <img src="/assets/images/tenet-poster.jpg" alt="tenet-poster" width="100px" height="150px" />
           </div>
           <div class="card-info">
             <h4 class="card-title">Tenet</h4>
@@ -310,10 +310,10 @@
               view full review
             </button>
           </div>
-        </div>
-        <div class="movie-card">
+        </li>
+        <li class="movie-card">
           <div class="card-img">
-            <img src="/images/tenet-poster.jpg" alt="tenet-poster" />
+            <img src="/assets/images/tenet-poster.jpg" alt="tenet-poster" width="100px" height="150px" />
           </div>
           <div class="card-info">
             <h4 class="card-title">Tenet</h4>
@@ -342,10 +342,10 @@
               view full review
             </button>
           </div>
-        </div>
-        <div class="movie-card">
+        </li>
+        <li class="movie-card">
           <div class="card-img">
-            <img src="/images/tenet-poster.jpg" alt="tenet-poster" />
+            <img src="/assets/images/tenet-poster.jpg" alt="tenet-poster" width="100px" height="150px" />
           </div>
           <div class="card-info">
             <h4 class="card-title">Tenet</h4>
@@ -374,10 +374,10 @@
               view full review
             </button>
           </div>
-        </div>
-        <div class="movie-card">
+        </li>
+        <li class="movie-card">
           <div class="card-img">
-            <img src="/images/tenet-poster.jpg" alt="tenet-poster" />
+            <img src="/assets/images/tenet-poster.jpg" alt="tenet-poster" width="100px" height="150px" />
           </div>
           <div class="card-info">
             <h4 class="card-title">Tenet</h4>
@@ -406,10 +406,10 @@
               view full review
             </button>
           </div>
-        </div>
-        <div class="movie-card">
+        </li>
+        <li class="movie-card">
           <div class="card-img">
-            <img src="/images/tenet-poster.jpg" alt="tenet-poster" />
+            <img src="/assets/images/tenet-poster.jpg" alt="tenet-poster" width="100px" height="150px" />
           </div>
           <div class="card-info">
             <h4 class="card-title">Tenet</h4>
@@ -438,10 +438,10 @@
               view full review
             </button>
           </div>
-        </div>
-        <div class="movie-card">
+        </li>
+        <li class="movie-card">
           <div class="card-img">
-            <img src="/images/tenet-poster.jpg" alt="tenet-poster" />
+            <img src="/assets/images/tenet-poster.jpg" alt="tenet-poster" width="100px" height="150px" />
           </div>
           <div class="card-info">
             <h4 class="card-title">Tenet</h4>
@@ -470,10 +470,10 @@
               view full review
             </button>
           </div>
-        </div>
-        <div class="movie-card">
+        </li>
+        <li class="movie-card">
           <div class="card-img">
-            <img src="/images/tenet-poster.jpg" alt="tenet-poster" />
+            <img src="/assets/images/tenet-poster.jpg" alt="tenet-poster" width="100px" height="150px" />
           </div>
           <div class="card-info">
             <h4 class="card-title">Tenet</h4>
@@ -502,19 +502,19 @@
               view full review
             </button>
           </div>
-        </div>
-      </div>
+        </li>
+      </ul>
     </main>
 
     <footer>
       <p>
         Designed by Mohammed Sobhi -
-        <a href="https://github.com/mohammedsobhi" target="_blank">github</a>
+        <a href="https://github.com/mohammedsobhi" target="_blank" rel="noreferrer">github</a>
       </p>
 
       <p>
         Developed by Mohammed Ramadan -
-        <a href="https://github.com/imohammedramadan" target="_blank">github</a>
+        <a href="https://github.com/imohammedramadan" target="_blank" rel="noreferrer">github</a>
       </p>
     </footer>
   </body>
