--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       <ul class="movie-cards-grid">
         <li class="movie-card">
           <div class="card-img">
-            <img src="/assets/images/tenet-poster.jpg" alt="tenet-poster" width="100px" height="150px" />
+            <img src="./assets/images/tenet-poster.jpg" alt="tenet-poster" width="100px" height="150px" />
           </div>
           <div class="card-info">
             <h4 class="card-title">Tenet</h4>
@@ -89,7 +89,7 @@
         </li>
         <li class="movie-card">
           <div class="card-img">
-            <img src="/assets/images/tenet-poster.jpg" alt="tenet-poster" width="100px" height="150px"/>
+            <img src="./assets/images/tenet-poster.jpg" alt="tenet-poster" width="100px" height="150px"/>
           </div>
           <div class="card-info">
             <h4 class="card-title">Tenet</h4>
@@ -121,7 +121,7 @@
         </li>
         <li class="movie-card">
           <div class="card-img">
-            <img src="/assets/images/tenet-poster.jpg" alt="tenet-poster" width="100px" height="150px" />
+            <img src="./assets/images/tenet-poster.jpg" alt="tenet-poster" width="100px" height="150px" />
           </div>
           <div class="card-info">
             <h4 class="card-title">Tenet</h4>
@@ -153,7 +153,7 @@
         </li>
         <li class="movie-card">
           <div class="card-img">
-            <img src="/assets/images/tenet-poster.jpg" alt="tenet-poster" width="100px" height="150px" />
+            <img src="./assets/images/tenet-poster.jpg" alt="tenet-poster" width="100px" height="150px" />
           </div>
           <div class="card-info">
             <h4 class="card-title">Tenet</h4>
@@ -185,7 +185,7 @@
         </li>
         <li class="movie-card">
           <div class="card-img">
-            <img src="/assets/images/tenet-poster.jpg" alt="tenet-poster" width="100px" height="150px" />
+            <img src="./assets/images/tenet-poster.jpg" alt="tenet-poster" width="100px" height="150px" />
           </div>
           <div class="card-info">
             <h4 class="card-title">Tenet</h4>
@@ -217,7 +217,7 @@
         </li>
         <li class="movie-card">
           <div class="card-img">
-            <img src="/assets/images/tenet-poster.jpg" alt="tenet-poster" width="100px" height="150px" />
+            <img src="./assets/images/tenet-poster.jpg" alt="tenet-poster" width="100px" height="150px" />
           </div>
           <div class="card-info">
             <h4 class="card-title">Tenet</h4>
@@ -249,7 +249,7 @@
         </li>
         <li class="movie-card">
           <div class="card-img">
-            <img src="/assets/images/tenet-poster.jpg" alt="tenet-poster" width="100px" height="150px" />
+            <img src="./assets/images/tenet-poster.jpg" alt="tenet-poster" width="100px" height="150px" />
           </div>
           <div class="card-info">
             <h4 class="card-title">Tenet</h4>
@@ -281,7 +281,7 @@
         </li>
         <li class="movie-card">
           <div class="card-img">
-            <img src="/assets/images/tenet-poster.jpg" alt="tenet-poster" width="100px" height="150px" />
+            <img src="./assets/images/tenet-poster.jpg" alt="tenet-poster" width="100px" height="150px" />
           </div>
           <div class="card-info">
             <h4 class="card-title">Tenet</h4>
@@ -313,7 +313,7 @@
         </li>
         <li class="movie-card">
           <div class="card-img">
-            <img src="/assets/images/tenet-poster.jpg" alt="tenet-poster" width="100px" height="150px" />
+            <img src="./assets/images/tenet-poster.jpg" alt="tenet-poster" width="100px" height="150px" />
           </div>
           <div class="card-info">
             <h4 class="card-title">Tenet</h4>
@@ -345,7 +345,7 @@
         </li>
         <li class="movie-card">
           <div class="card-img">
-            <img src="/assets/images/tenet-poster.jpg" alt="tenet-poster" width="100px" height="150px" />
+            <img src="./assets/images/tenet-poster.jpg" alt="tenet-poster" width="100px" height="150px" />
           </div>
           <div class="card-info">
             <h4 class="card-title">Tenet</h4>
@@ -377,7 +377,7 @@
         </li>
         <li class="movie-card">
           <div class="card-img">
-            <img src="/assets/images/tenet-poster.jpg" alt="tenet-poster" width="100px" height="150px" />
+            <img src="./assets/images/tenet-poster.jpg" alt="tenet-poster" width="100px" height="150px" />
           </div>
           <div class="card-info">
             <h4 class="card-title">Tenet</h4>
@@ -409,7 +409,7 @@
         </li>
         <li class="movie-card">
           <div class="card-img">
-            <img src="/assets/images/tenet-poster.jpg" alt="tenet-poster" width="100px" height="150px" />
+            <img src="./assets/images/tenet-poster.jpg" alt="tenet-poster" width="100px" height="150px" />
           </div>
           <div class="card-info">
             <h4 class="card-title">Tenet</h4>
@@ -441,7 +441,7 @@
         </li>
         <li class="movie-card">
           <div class="card-img">
-            <img src="/assets/images/tenet-poster.jpg" alt="tenet-poster" width="100px" height="150px" />
+            <img src="./assets/images/tenet-poster.jpg" alt="tenet-poster" width="100px" height="150px" />
           </div>
           <div class="card-info">
             <h4 class="card-title">Tenet</h4>
@@ -473,7 +473,7 @@
         </li>
         <li class="movie-card">
           <div class="card-img">
-            <img src="/assets/images/tenet-poster.jpg" alt="tenet-poster" width="100px" height="150px" />
+            <img src="./assets/images/tenet-poster.jpg" alt="tenet-poster" width="100px" height="150px" />
           </div>
           <div class="card-info">
             <h4 class="card-title">Tenet</h4>
