--- a/index.html
+++ b/index.html
@@ -4,14 +4,18 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;400;700&display=swap"
       rel="stylesheet"
     />
+
+    <!-- style sheet -->
     <link rel="stylesheet" href="./styles.css" />
 
-    <title>Films</title>
+    <title>My Movie list</title>
   </head>
   <body>
     <header>
@@ -53,11 +57,16 @@
       </section>
     </header>
 
-  <main>
+    <main>
       <ul class="movie-cards-grid">
         <li class="movie-card">
           <div class="card-img">
-            <img src="./assets/images/tenet-poster.jpg" alt="tenet-poster" width="100px" height="150px" />
+            <img
+              src="./assets/images/tenet-poster.jpg"
+              alt="tenet-poster"
+              width="100px"
+              height="150px"
+            />
           </div>
           <div class="card-info">
             <h4 class="card-title">Tenet</h4>
@@ -89,7 +98,12 @@
         </li>
         <li class="movie-card">
           <div class="card-img">
-            <img src="./assets/images/tenet-poster.jpg" alt="tenet-poster" width="100px" height="150px"/>
+            <img
+              src="./assets/images/tenet-poster.jpg"
+              alt="tenet-poster"
+              width="100px"
+              height="150px"
+            />
           </div>
           <div class="card-info">
             <h4 class="card-title">Tenet</h4>
@@ -121,7 +135,12 @@
         </li>
         <li class="movie-card">
           <div class="card-img">
-            <img src="./assets/images/tenet-poster.jpg" alt="tenet-poster" width="100px" height="150px" />
+            <img
+              src="./assets/images/tenet-poster.jpg"
+              alt="tenet-poster"
+              width="100px"
+              height="150px"
+            />
           </div>
           <div class="card-info">
             <h4 class="card-title">Tenet</h4>
@@ -153,7 +172,12 @@
         </li>
         <li class="movie-card">
           <div class="card-img">
-            <img src="./assets/images/tenet-poster.jpg" alt="tenet-poster" width="100px" height="150px" />
+            <img
+              src="./assets/images/tenet-poster.jpg"
+              alt="tenet-poster"
+              width="100px"
+              height="150px"
+            />
           </div>
           <div class="card-info">
             <h4 class="card-title">Tenet</h4>
@@ -185,7 +209,12 @@
         </li>
         <li class="movie-card">
           <div class="card-img">
-            <img src="./assets/images/tenet-poster.jpg" alt="tenet-poster" width="100px" height="150px" />
+            <img
+              src="./assets/images/tenet-poster.jpg"
+              alt="tenet-poster"
+              width="100px"
+              height="150px"
+            />
           </div>
           <div class="card-info">
             <h4 class="card-title">Tenet</h4>
@@ -217,7 +246,12 @@
         </li>
         <li class="movie-card">
           <div class="card-img">
-            <img src="./assets/images/tenet-poster.jpg" alt="tenet-poster" width="100px" height="150px" />
+            <img
+              src="./assets/images/tenet-poster.jpg"
+              alt="tenet-poster"
+              width="100px"
+              height="150px"
+            />
           </div>
           <div class="card-info">
             <h4 class="card-title">Tenet</h4>
@@ -249,7 +283,12 @@
         </li>
         <li class="movie-card">
           <div class="card-img">
-            <img src="./assets/images/tenet-poster.jpg" alt="tenet-poster" width="100px" height="150px" />
+            <img
+              src="./assets/images/tenet-poster.jpg"
+              alt="tenet-poster"
+              width="100px"
+              height="150px"
+            />
           </div>
           <div class="card-info">
             <h4 class="card-title">Tenet</h4>
@@ -281,7 +320,12 @@
         </li>
         <li class="movie-card">
           <div class="card-img">
-            <img src="./assets/images/tenet-poster.jpg" alt="tenet-poster" width="100px" height="150px" />
+            <img
+              src="./assets/images/tenet-poster.jpg"
+              alt="tenet-poster"
+              width="100px"
+              height="150px"
+            />
           </div>
           <div class="card-info">
             <h4 class="card-title">Tenet</h4>
@@ -313,7 +357,12 @@
         </li>
         <li class="movie-card">
           <div class="card-img">
-            <img src="./assets/images/tenet-poster.jpg" alt="tenet-poster" width="100px" height="150px" />
+            <img
+              src="./assets/images/tenet-poster.jpg"
+              alt="tenet-poster"
+              width="100px"
+              height="150px"
+            />
           </div>
           <div class="card-info">
             <h4 class="card-title">Tenet</h4>
@@ -345,7 +394,12 @@
         </li>
         <li class="movie-card">
           <div class="card-img">
-            <img src="./assets/images/tenet-poster.jpg" alt="tenet-poster" width="100px" height="150px" />
+            <img
+              src="./assets/images/tenet-poster.jpg"
+              alt="tenet-poster"
+              width="100px"
+              height="150px"
+            />
           </div>
           <div class="card-info">
             <h4 class="card-title">Tenet</h4>
@@ -377,7 +431,12 @@
         </li>
         <li class="movie-card">
           <div class="card-img">
-            <img src="./assets/images/tenet-poster.jpg" alt="tenet-poster" width="100px" height="150px" />
+            <img
+              src="./assets/images/tenet-poster.jpg"
+              alt="tenet-poster"
+              width="100px"
+              height="150px"
+            />
           </div>
           <div class="card-info">
             <h4 class="card-title">Tenet</h4>
@@ -409,7 +468,12 @@
         </li>
         <li class="movie-card">
           <div class="card-img">
-            <img src="./assets/images/tenet-poster.jpg" alt="tenet-poster" width="100px" height="150px" />
+            <img
+              src="./assets/images/tenet-poster.jpg"
+              alt="tenet-poster"
+              width="100px"
+              height="150px"
+            />
           </div>
           <div class="card-info">
             <h4 class="card-title">Tenet</h4>
@@ -441,7 +505,12 @@
         </li>
         <li class="movie-card">
           <div class="card-img">
-            <img src="./assets/images/tenet-poster.jpg" alt="tenet-poster" width="100px" height="150px" />
+            <img
+              src="./assets/images/tenet-poster.jpg"
+              alt="tenet-poster"
+              width="100px"
+              height="150px"
+            />
           </div>
           <div class="card-info">
             <h4 class="card-title">Tenet</h4>
@@ -473,7 +542,12 @@
         </li>
         <li class="movie-card">
           <div class="card-img">
-            <img src="./assets/images/tenet-poster.jpg" alt="tenet-poster" width="100px" height="150px" />
+            <img
+              src="./assets/images/tenet-poster.jpg"
+              alt="tenet-poster"
+              width="100px"
+              height="150px"
+            />
           </div>
           <div class="card-info">
             <h4 class="card-title">Tenet</h4>
@@ -509,12 +583,22 @@
     <footer>
       <p>
         Designed by Mohammed Sobhi -
-        <a href="https://github.com/mohammedsobhi" target="_blank" rel="noreferrer">github</a>
+        <a
+          href="https://github.com/mohammedsobhi"
+          target="_blank"
+          rel="noreferrer"
+          >github</a
+        >
       </p>
 
       <p>
         Developed by Mohammed Ramadan -
-        <a href="https://github.com/imohammedramadan" target="_blank" rel="noreferrer">github</a>
+        <a
+          href="https://github.com/imohammedramadan"
+          target="_blank"
+          rel="noreferrer"
+          >github</a
+        >
       </p>
     </footer>
   </body>
