fixed image pathing for github pages

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
               <p id="card-rate" class="card-rate">9</p>
               <img
                 class="card-rate-star"
-                src="/assets/star.svg"
+                src="./assets/star.svg"
                 alt="rate-star"
               />
             </div>
@@ -112,7 +112,7 @@
               <p id="card-rate" class="card-rate">9</p>
               <img
                 class="card-rate-star"
-                src="/assets/star.svg"
+                src="./assets/star.svg"
                 alt="rate-star"
               />
             </div>
@@ -149,7 +149,7 @@
               <p id="card-rate" class="card-rate">9</p>
               <img
                 class="card-rate-star"
-                src="/assets/star.svg"
+                src="./assets/star.svg"
                 alt="rate-star"
               />
             </div>
@@ -186,7 +186,7 @@
               <p id="card-rate" class="card-rate">9</p>
               <img
                 class="card-rate-star"
-                src="/assets/star.svg"
+                src="./assets/star.svg"
                 alt="rate-star"
               />
             </div>
@@ -223,7 +223,7 @@
               <p id="card-rate" class="card-rate">9</p>
               <img
                 class="card-rate-star"
-                src="/assets/star.svg"
+                src="./assets/star.svg"
                 alt="rate-star"
               />
             </div>
@@ -260,7 +260,7 @@
               <p id="card-rate" class="card-rate">9</p>
               <img
                 class="card-rate-star"
-                src="/assets/star.svg"
+                src="./assets/star.svg"
                 alt="rate-star"
               />
             </div>
@@ -297,7 +297,7 @@
               <p id="card-rate" class="card-rate">9</p>
               <img
                 class="card-rate-star"
-                src="/assets/star.svg"
+                src="./assets/star.svg"
                 alt="rate-star"
               />
             </div>
@@ -334,7 +334,7 @@
               <p id="card-rate" class="card-rate">9</p>
               <img
                 class="card-rate-star"
-                src="/assets/star.svg"
+                src="./assets/star.svg"
                 alt="rate-star"
               />
             </div>
@@ -371,7 +371,7 @@
               <p id="card-rate" class="card-rate">9</p>
               <img
                 class="card-rate-star"
-                src="/assets/star.svg"
+                src="./assets/star.svg"
                 alt="rate-star"
               />
             </div>
@@ -408,7 +408,7 @@
               <p id="card-rate" class="card-rate">9</p>
               <img
                 class="card-rate-star"
-                src="/assets/star.svg"
+                src="./assets/star.svg"
                 alt="rate-star"
               />
             </div>
@@ -445,7 +445,7 @@
               <p id="card-rate" class="card-rate">9</p>
               <img
                 class="card-rate-star"
-                src="/assets/star.svg"
+                src="./assets/star.svg"
                 alt="rate-star"
               />
             </div>
@@ -482,7 +482,7 @@
               <p id="card-rate" class="card-rate">9</p>
               <img
                 class="card-rate-star"
-                src="/assets/star.svg"
+                src="./assets/star.svg"
                 alt="rate-star"
               />
             </div>
@@ -519,7 +519,7 @@
               <p id="card-rate" class="card-rate">9</p>
               <img
                 class="card-rate-star"
-                src="/assets/star.svg"
+                src="./assets/star.svg"
                 alt="rate-star"
               />
             </div>
@@ -556,7 +556,7 @@
               <p id="card-rate" class="card-rate">9</p>
               <img
                 class="card-rate-star"
-                src="/assets/star.svg"
+                src="./assets/star.svg"
                 alt="rate-star"
               />
             </div>
